--- a/admin.html
+++ b/admin.html
@@ -7,6 +7,7 @@
     <title>Admin WarungKu</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" type="image/png" href="icon.png">
     <style>
         body { background-color: #f0f2f5; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
         .order-card { border-left: 6px solid #ffc107; border-radius: 8px; transition: 0.2s; background: white; position: relative; }
@@ -293,3 +294,4 @@
 </body>
 
 </html>
+
