--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Pesan Menu</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" type="image/png" href="icon.png">
     <style>
         body { background-color: #f8f9fa; }
         .menu-card { border: none; border-radius: 12px; transition: 0.3s; height: 100%; }
@@ -142,4 +143,5 @@
         renderMenu();
     </script>
 </body>
+
 </html>
