--- a/login.html
+++ b/login.html
@@ -20,8 +20,8 @@
         
         <div id="auth-form">
             <div class="mb-3">
-                <label class="form-label small fw-bold">Email</label>
-                <input type="email" id="email" class="form-control" placeholder="email@toko.com">
+                <label class="form-label small fw-bold">Username</label>
+                <input type="email" id="email" class="form-control" placeholder="Username">
             </div>
             <div class="mb-3">
                 <label class="form-label small fw-bold">Password</label>
